--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "mmerian/phpcrawl": "^0.8.3",
+        "mmerian/phpcrawl": "dev-master",
         "symfony/browser-kit": "^3.3"
     },
     "require-dev": {
@@ -19,8 +19,9 @@
         "phpunit/phpunit": "~5.7"
     },
     "autoload": {
+
         "classmap": [
-            "database"
+
         ],
         "psr-4": {
             "App\\": "app/"
@@ -31,6 +32,20 @@
             "Tests\\": "tests/"
         }
     },
+     "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "melkawakibi/phpcrawl",
+                "version": "master",
+                "source": {
+                    "url": "https://github.com/melkawakibi/phpcrawl.git",
+                    "type": "git",
+                    "reference": "master"
+                }
+             }
+        }
+    ],
     "scripts": {
         "post-root-package-install": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
