--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "barryvdh/laravel-dompdf": "^0.8.0",
-        "fabpot/goutte": "^3.2",
+        "barryvdh/laravel-dompdf": "dev-ontwikkel",
+        "dompdf/dompdf": "^0.8",
         "guzzlehttp/guzzle": "^6.3",
+        "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "mmerian/phpcrawl": "dev-master",
+        "spipu/html2pdf": "^5.0",
         "symfony/browser-kit": "^3.3"
     },
     "require-dev": {
@@ -36,16 +38,8 @@
     },
      "repositories": [
         {
-            "type": "package",
-            "package": {
-                "name": "melkawakibi/phpcrawl",
-                "version": "master",
-                "source": {
-                    "url": "https://github.com/melkawakibi/phpcrawl.git",
-                    "type": "git",
-                    "reference": "master"
-                }
-             }
+            "type": "vcs",
+            "url":  "https://github.com/melkawakibi/laravel-dompdf.git"
         }
     ],
     "scripts": {
